--- a/_posts/2025-03-19-第二周表彰.md
+++ b/_posts/2025-03-19-第二周表彰.md
@@ -2,12 +2,12 @@
 title: "第二周表彰"
 date: 2025-03-18
 ---
- <!DOCTYPE html>
+
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>三谋听雪 S6赛季周报</title>
+    <title>风丶天蓝听雪 战报</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
